# typespecs

./: .buildinfo  CITATION.cff  LICENSE  README.md  genindex.html  pyproject.toml  search.html
.devcontainer/: devcontainer.json
.doctrees/: environment.pickle
1.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.0.0rc1/: index.html  objects.inv  py-modindex.html  searchindex.js
1.0.0rc2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
1.0.0rc3/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
10.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
2.0.1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html
2.0.2/: .buildinfo  genindex.html  index.html  py-modindex.html  search.html  searchindex.js
3.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
3.0.0rc1/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
3.0.0rc2/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
4.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
5.0.0/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
6.0.0/: .buildinfo  genindex.html  index.html  objects.inv  (+3 more)
(+289 files in other folders)
