[project]
name = "typespecs"
version = "5.0.0"
description = "Data specifications by type hints"
readme = "README.md"
keywords = [
    "annotation",
    "dataclass",
    "dataframe",
    "namedtuple",
    "python",
    "specification",
    "typeddict",
    "typing",
]
requires-python = ">=3.10,<4.0"
dependencies = [
    "packaging>=24",
    "pandas>=2",
    "readonlydict>=1",
    "typing-extensions>=4",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[[project.authors]]
name = "Akio Taniguchi"
email = "mail@taniguchiak.io"

[project.license]
file = "LICENSE"

[project.urls]
homepage = "https://astropenguin.github.io/typespecs"
repository = "https://github.com/astropenguin/typespecs"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25,<27",
    "ipython>=8,<10",
    "myst-parser>=4,<6",
    "pandas-stubs>=2",
    "pydata-sphinx-theme>=0.16,<1.0",
    "pyright>=1,<2",
    "pytest>=8,<10",
    "sphinx>=8,<10",
]

[tool.pyright]
typeCheckingMode = "strict"
reportArgumentType = "warning"
reportCallIssue = "warning"
reportIncompatibleMethodOverride = "warning"
reportNoOverloadImplementation = "warning"
reportUnknownMemberType = "warning"
